--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         box-sizing: border-box;
       }
       body {
-        font-family: Arial, sans-serif;
+        font-family: 'Arial', sans-serif;
         overflow: hidden;
       }
       a-scene {
@@ -31,7 +31,7 @@
       <a-entity
         id="boxGeometry"
         position="0 2.0 -1"
-        rotation="45 45 0"
+        rotation="45 0 0"
         geometry="primitive: box; height: 0.6; width: 0.6; depth: 0.6"
         material="color: #ff4b5c"
         size-change
