--- a/index.html
+++ b/index.html
@@ -24,46 +24,7 @@
     <script type="module" src="/main.js"></script>
   </head>
   <body>
-    <a-scene environment info-message="htmlSrc: #messageText">
-      <a-assets>
-        <a-asset-item id="messageText" src="message.html"></a-asset-item>
-      </a-assets>
-      <a-entity
-        id="boxGeometry"
-        position="0 1.3 -1"
-        rotation="45 0 0"
-        geometry="primitive: box; height: 0.6; width: 0.6; depth: 0.6"
-        material="color: #ff4b5c"
-        size-change
-        scale="0.5 0.5 0.5"
-      ></a-entity>
-       <a-entity
-        id="torusGeometry"
-        position="0 1.3 -1"
-        rotation="45 45 0"
-        geometry="primitive: torus; radius: 0.4; radius-tubular: 0.06"
-        material="color: #d2e603"
-        size-change
-        visible="false"
-        scale="0.5 0.5 0.5"
-      ></a-entity>
-       <a-entity
-        id="sphereGeometry"
-        position="0 1.3 -1"
-        rotation="45 45 0"
-        geometry="primitive: sphere; radius: 0.6;"
-        material="color: #fcdab7"
-        size-change
-        visible="false"
-        scale="0.5 0.5 0.5"
-      ></a-entity>
-      <a-entity id="menu" menu position="0 1.0 -0.5" rotation="-45 0 0" event-manager>
-        <a-entity slider position="0 0.10 0"></a-entity>
-        <a-entity id="sphereButton" button="label: sphere" position="-0.15 0 0"></a-entity>
-        <a-entity id="boxButton" button="label: box" position="0 0 0"></a-entity>
-        <a-entity id="torusButton" button="label: torus" position="0.15 0 0"></a-entity>
-        <a-entity id="darkModeButton" button="label: Dark Mode; width: 0.20; toggleable: true" position="0 -0.10 0"></a-entity>
-      </a-entity>
+    <a-scene environment>
       <a-entity hand-tracking-controls="hand: left"></a-entity>
       <a-entity hand-tracking-controls="hand: right"></a-entity>
     </a-scene>
