--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <script type="module" src="/main.js"></script>
   </head>
   <body>
-    <a-scene 
-      xr-mode="immersive-ar"
-      background="transparent"
-      renderer="colorManagement: true; sortObjects: true">
+    <a-scene
+      renderer="antialias: true; colorManagement: true; sortObjects: true"
+      webxr="requiredFeatures: local-floor; optionalFeatures: hand-tracking">
       <a-entity hand-tracking-controls="hand: left"></a-entity>
       <a-entity hand-tracking-controls="hand: right"></a-entity>
     </a-scene>
   </body>
+  
 </html>
