--- a/index.html
+++ b/index.html
@@ -29,15 +29,10 @@
   </head>
   <body>
     <a-scene
-      renderer="antialias: true; alpha: true; colorManagement: true; sortObjects: true"
-      vr-mode-ui="enabled: true">
-  
-      <a-entity hand-tracking-controls="hand: left"></a-entity>
-      <a-entity hand-tracking-controls="hand: right"></a-entity>
-  
+        renderer="antialias: true; colorManagement: true; sortObjects: true">
+        <a-entity hand-tracking-controls="hand: left"></a-entity>
+        <a-entity hand-tracking-controls="hand: right"></a-entity>
     </a-scene>
-  </body>
-  
 
   </body>
 </html>
