--- a/index.html
+++ b/index.html
@@ -1,38 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Hand Tracking! • A-Frame</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- A-Frame -->
-    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
-
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      body {
-        font-family: Arial, sans-serif;
-        overflow: hidden;
-      }
-      a-scene {
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
-
-    <!-- Your own game logic; if this imports aframe, keep it, otherwise just load after aframe -->
-    <script type="module" src="/main.js"></script>
+    <title>A-Frame AR Example</title>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
-  <body>
-    <a-scene
-        renderer="antialias: true; colorManagement: true; sortObjects: true">
-        <a-entity hand-tracking-controls="hand: left"></a-entity>
-        <a-entity hand-tracking-controls="hand: right"></a-entity>
+  <body style="margin : 0px; overflow: hidden;">
+    <a-scene embedded arjs>
+      <a-marker preset="hiro">
+        <a-box position="0 0.5 0" material="color: red"></a-box>
+      </a-marker>
+      <a-entity camera></a-entity>
     </a-scene>
-
   </body>
 </html>
