--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>A-Frame AR Example</title>
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  </head>
-  <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs>
-      <a-marker preset="hiro">
-        <a-box position="0 0.5 0" material="color: red"></a-box>
-      </a-marker>
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
+    <meta charset="utf-8">
+    <title>Hand Tracking! • A-Frame</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- A-Frame -->
+    <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+    <!-- include ar.js for A-Frame -->
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <body style='margin : 0px; overflow: hidden;'>
+      <a-scene embedded arjs>
+        <!-- Box in AR scene -->
+        <a-box 
+          position='0 0.5 0' 
+          width='0.5' 
+          height='0.5' 
+          depth='0.5'
+          material='color: #4CC3D9; opacity: 1.0;'
+          rotation='0 45 0'>
+        </a-box>
+        <!-- define a camera which will move according to the marker position -->
+        <a-marker-camera preset='hiro'></a-marker-camera>
+      </a-scene>
+    </body>
 </html>
