--- a/index.html
+++ b/index.html
@@ -4,24 +4,43 @@
     <meta charset="utf-8">
     <title>Hand Tracking! • A-Frame</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- A-Frame -->
-    <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-    <!-- include ar.js for A-Frame -->
-    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-    <body style='margin : 0px; overflow: hidden;'>
-      <a-scene embedded arjs>
-        <!-- Box in AR scene -->
-        <a-box 
-          position='0 0.5 0' 
-          width='0.5' 
-          height='0.5' 
-          depth='0.5'
-          material='color: #4CC3D9; opacity: 1.0;'
-          rotation='0 45 0'>
-        </a-box>
-        <!-- define a camera which will move according to the marker position -->
-        <a-marker-camera preset='hiro'></a-marker-camera>
-      </a-scene>
-    </body>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        font-family: 'Arial', sans-serif;
+        overflow: hidden;
+      }
+      a-scene {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
+    <script type="module" src="/main.js"></script>
+  </head>
+  <body>
+    <a-scene 
+      background="transparent"
+      renderer="colorManagement: true; sortObjects: true; alpha: true"
+      webxr="referenceSpaceType: local-floor; requiredFeatures: local-floor; optionalFeatures: hand-tracking, hit-test"
+      vr-mode-ui="enabled: true">
+      
+      <!-- Box in AR scene -->
+      <a-box 
+        position="0 1.3 -1" 
+        width="0.5" 
+        height="0.5" 
+        depth="0.5"
+        material="color: #4CC3D9; opacity: 1.0;"
+        rotation="0 45 0">
+      </a-box>
+      
+      <!-- Hand tracking controls -->
+      <a-entity hand-tracking-controls="hand: left"></a-entity>
+      <a-entity hand-tracking-controls="hand: right"></a-entity>
+    </a-scene>
+  </body>
 </html>
