--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       background="transparent"
       renderer="colorManagement: true; sortObjects: true; alpha: true"
       webxr="referenceSpaceType: local-floor; requiredFeatures: local-floor; optionalFeatures: hand-tracking, hit-test"
-      vr-mode-ui="enabled: false">
+      vr-mode-ui="enabled: true">
       
       <!-- Box in AR scene -->
       <a-box 
