--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
     </div>
   
     <a-scene 
-      background="transparent"
-      renderer="colorManagement: true; sortObjects: true; alpha: true"
-      webxr="referenceSpaceType: local-floor; requiredFeatures: local-floor; optionalFeatures: hand-tracking, hit-test"
-      vr-mode-ui="enabled: true">
+  background="transparent"
+  renderer="colorManagement: true; sortObjects: true; alpha: true"
+  webxr="referenceSpaceType: local-floor; requiredFeatures: local-floor; optionalFeatures: hand-tracking, hit-test"
+  vr-mode-ui="enabled: false">
+
+
       
       <!-- Box in AR scene -->
       <a-box 
