--- a/index.html
+++ b/index.html
@@ -73,8 +73,50 @@
       background="transparent"
       renderer="colorManagement: true; sortObjects: true; alpha: true"
       webxr="referenceSpaceType: local-floor; requiredFeatures: local-floor; optionalFeatures: hand-tracking, hit-test"
-      vr-mode-ui="enabled: false">
-      
+      vr-mode-ui="enabled: true">
+
+      <!-- 1) Assets (REQUIRED) -->
+      <a-assets>
+        <img id="intro1" src="/images/intro1.png">
+        <img id="intro2" src="/images/intro2.png">
+        <img id="intro3" src="/images/intro3.png">
+        <img id="intro4" src="/images/intro4.png">
+      </a-assets>
+
+      <!-- 2) Camera + cursor so we can click in VR/AR -->
+      <a-entity id="rig" position="0 1.6 0">
+        <a-camera>
+          <a-entity 
+            cursor="fuse: false"
+            raycaster="objects: .clickable"
+            position="0 0 -1"
+            geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.015"
+            material="color: white; shader: flat">
+          </a-entity>
+        </a-camera>
+      </a-entity>
+
+      <!-- 3) 3D Intro panel (will be visible in VR/AR) -->
+      <a-entity id="intro-panel" position="0 1.6 -2">
+        <a-plane
+          id="intro-image-3d"
+          width="1.8"
+          height="1.1"
+          material="src: #intro1; transparent: true; side: double">
+        </a-plane>
+
+        <a-plane
+          id="intro-button-3d"
+          class="clickable"
+          position="0 -0.9 0.01"
+          width="0.9"
+          height="0.3"
+          material="color: #2196F3"
+          text="value: Next; align: center; color: #FFFFFF; width: 2">
+        </a-plane>
+      </a-entity>
+
+      <!-- 4) Your other scene objects -->
       <a-box 
         position="0 1.3 -1" 
         width="0.5" 
@@ -83,10 +125,12 @@
         material="color: #4CC3D9; opacity: 1.0;"
         rotation="0 45 0">
       </a-box>
-  
+
       <a-entity hand-tracking-controls="hand: left"></a-entity>
       <a-entity hand-tracking-controls="hand: right"></a-entity>
+
     </a-scene>
+
   </body>
   
   
