--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
       
 
       <!-- Your box -->
-      <a-box 
+      <!-- <a-box 
         position="0 1.4 -1"
         width="0.5" 
         height="0.5" 
         depth="0.5"
         material="color: #4CC3D9; opacity: 1.0;"
         rotation="0 45 0">
-      </a-box>
+      </a-box> -->
 
 
       <a-entity hand-tracking-controls="hand: left"></a-entity>
