--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
   </head>
   <body>
     <!-- Intro overlay -->
-    <div id="intro-overlay">
+    <!-- <div id="intro-overlay">
       <div id="intro-content">
         <img id="intro-image" src="" alt="Intro screen" />
         <button id="intro-button">Next</button>
       </div>
-    </div>
+    </div> -->
   
     <!-- Hidden camera feed (for object detection) -->
     <video id="cameraFeed" autoplay playsinline style="display:none;"></video>
