--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
       <a-entity
         id="rightHand"
         hand-tracking-controls="hand: right"
-        raycaster="objects: .clickable; showLine: true; recursive: true">
+        raycaster="objects: .clickable; showLine: true; recursive: true"
+        position="0 0 0">
       </a-entity>
 
       <!-- Room model: will be auto-split into clickable parts by main.js -->
