--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 
   <body>
     <a-scene
-      background="transparent"
-      renderer="colorManagement: true; sortObjects: true; alpha: true"
-      webxr="referenceSpaceType: local-floor; requiredFeatures: local-floor; optionalFeatures: hand-tracking, hit-test"
-      vr-mode-ui="enabled: true"
-      triangle-selector>
+  background="transparent"
+  renderer="colorManagement: true; sortObjects: true; alpha: true"
+  webxr="referenceSpaceType: local-floor; requiredFeatures: local-floor; optionalFeatures: hand-tracking, hit-test"
+  vr-mode-ui="enabled: true"
+  two-hand-select-circle>
+
 
 
 
